src/globalStyle.css
/* ... */
/* 预设默认样式 */
* {
    --interface-foreground: var(--text-black);
    --interface-background: var(--background-light);
    --interface-foreground-grey: var(--default-grey);
    --interface-background-grey: var(--background-grey-light);
    --interface-transparent: var(--transparent-white);
    --interface-transparent-grey: var(--transparent-lightgrey);
    --interface-contrast-background: var(--backgruond-ultralight);

    --theme-color-default: var(--color-blue-default);
    --theme-color-light: var(--color-blue-light);
    --theme-color-deep: var(--color-blue-deep);
    --theme-color-ultradeep: var(--color-blue-ultradeep);
    --theme-color-transparent: var(--color-blue-transparent);
}

/* 元素样式 */
body {
    margin: 0;
    overflow: hidden;
    background: transparent;
}

button {
    outline: none;
    -webkit-app-region: nodrag;
}

a {
    text-decoration: none;
}

/* 滚动条 */
::-webkit-scrollbar {
    background: transparent;
    width: 0.5rem;
    height: 0.5rem;
}

::-webkit-scrollbar-track-piece {
    background: rgba(160, 163, 168, 0.3);
    border-radius: 0.25rem;
}

::-webkit-scrollbar-thumb {
    background: rgba(139, 158, 181, 0.6);
    border-radius: 0.25rem;
}

/* 文本 */
.text {
    color: var(--interface-foreground);
    font-family: 'Consolas', 'Microsoft YaHei UI', sans-serif;
}
/* 粗体 */
.text.bold {
    font-weight: bold;
}
/* 细体 */
.text.light {
    font-weight: 200;
}
/* 大小 */
.text.xxlarge {
    font-size: 35pt;
}
.text.extraLarge {
    font-size: 30pt;
}
.text.large {
    font-size: 24pt;
}
.text.medium {
    font-size: 18pt;
}
.text.small {
    font-size: 14pt;
}
.text.ultraSmall {
    font-size: 12pt;
}
/* 灰色 */
.text.grey {
    color: var(--default-grey);
}
/* 白色 */
.text.white {
    color: var(--default-white);
}
/* 发光 */
.text.glow {
    text-shadow: 0 0 2px var(--default-white);
}

/* flex */
.flex {
    display: flex;
}
.flex.row {
    flex-direction: row;
}
.flex.column {
    flex-direction: column;
}

.textInput {
    appearance: none;

    background: var(--interface-background);
    border: none;
    border-radius: 6px;

    transition: background 300ms ease-in-out;
}


#app {
    width: 100%;
    height: 100vh;

    background: transparent;
}

#windowMain {
    height: 100%;

    background: var(--interface-background);

    transition: all 300ms ease-in-out;
}

/* 窗口标题栏 */
#windowControlBar {
    position: fixed;
    width: 100%;
    height: 2.5rem;
    top: 0;

    background: transparent;
    /* border-radius: 1rem 1rem 0 0; */

    transition: all 300ms ease-in-out;
}

#windowDrag {
    position: relative;
    height: 2.5rem;
    float: left;

    align-items: center;
    padding-left: 0.5rem;

    -webkit-app-region: drag;
    flex: 1 0;
}

#appIcon {
    width: 2rem;
    height: 2rem;

    margin-right: 0.5rem;
}

#windowOptions {
    position: relative;
    height: 2.5rem;

    float: right;

    -webkit-app-region: no-drag;
}

.windowControl {
    position: relative;
    width: 3rem;
    height: calc(100% - 4px);

    background: transparent;
    border: none;
    border-radius: 6px;

    margin-top: 2px;
    margin-right: 2px;

    transition: all 200ms ease-in-out;
}
.windowControl.default:hover {
    background: var(--transparent-grey);
}
.windowControl.close:hover {
    background: var(--color-red-default);
}
.windowControl > img {
    position: relative;
    top: 0.1rem;
    
    width: 1rem;
    height: 1rem;
}

/* 主界面 */
#appMain {
    position: relative;
    width: 100%;
    height: calc(100vh - 2.5rem);
    top: 2.5rem;

    background: transparent;
}

/* 页面切换 */
#pageSelector {
    position: fixed;

    width: 4rem;
    height: calc(100vh - 14rem);

    justify-content: center;

    z-index: 50;
}

/* 顶部工具栏 */
#windowTop {
    position: relative;
    width: 100%;
    height: 3rem;

    padding: 0 5rem;

    align-items: center;
}

/* 前进 / 后退按钮 */
.pageControl {
    appearance: none;

    width: 3rem;
    height: 3rem;

    background: transparent;
    border: none;
    border-radius: 1.5rem;

    margin: 0 3px;

    transition: all 200ms ease-in-out;

    display: flex;
    justify-content: center;
    align-items: center;
}
.pageControl > img {
    width: 3rem;
    height: 3rem;
}
#pageBack > img {
    left: -3px;
}
.pageControl:hover {
    background: var(--transparent-grey);
}

#windowTabs {
    position: relative;
    height: 2rem;

    justify-content: center;
    align-items: center;
    flex: 1 0;
}

/* 页面内容 */
#pageContainer {
    position: relative;
    width: calc(100% - 4rem);
    height: calc(100vh - 5rem);
    left: 4rem;

    overflow-x: hidden;
    overflow-y: auto;
}

/* 标签页组件 */
.tabsContainer {
    width: 100%;
}
.tabSwitcher {
    margin: 3px 0;
}
.tabItem {
    position: relative;
    width: 9rem;
    height: 3rem;

    background: transparent;
    color: var(--interface-foreground);
    font-weight: bold;

    border: none;
    border-radius: 8px;

    margin: 0 0.5rem;

    justify-content: center;
    align-items: center;

    transition: all 200ms ease-in-out;
}
.tabItem.smallTab {
    width: 6rem;
    height: 2rem;
}
.tabItem.current {
    background: var(--theme-color-light);
}
.tabItem:hover {
    background: var(--transparent-grey);
}
.tabItem > img {
    width: 2rem;
    height: 2rem;

    margin-right: 6px;
}
.tabItem.current > label {
    color: var(--theme-color-deep);
}
/* 标签页切换动画 */
.switchAnimation-enter-active, 
.switchAnimation-leave-active {
    transition: all 200ms ease-in-out;
}
.switchAnimation-enter-from {
    opacity: 0;
    transform: translateX(20px);
}
.switchAnimation-leave-to {
    opacity: 0;
    transform: translateX(-20px);
}

.pageButton {
    width: 3rem;
    height: 3rem;

    background: transparent;
    border: none;
    border-radius: 1.5rem;

    margin: 3px 0.5rem;

    overflow: hidden;
    transition: 
        all 200ms ease-in-out,
        justify-content 0ms ease-in-out 200ms;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
/* ... */

